# actix_testing_example

./: Cargo.toml  Readme.md
src/: config.rs  main.rs  posts.rs
thunder-tests/collections/: tc_col_local.json
thunder-tests/environments/: tc_env_local.json
