[package]
name = "actix_testing_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-prom = "0.6.0"
async-trait = "0.1.68"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
systemstat = "0.2.3"
test-log = "0.2.12"
thiserror = "1.0.40"
